--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,16 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker compose build ml_model
+        run: docker compose build fastapi-house-price-app
 
       - name: Tag Docker image
-        run: docker tag ml_model ${{ secrets.DOCKER_USERNAME }}/monrepoondockerhub
+        run: docker tag ml_model ${{ secrets.DOCKER_USERNAME }}/fastapi-house-price-app
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/monrepoondockerhub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/fastapi-house-price-app
 
       - name: Deploy via SSH with password
         run: |
@@ -30,7 +30,7 @@ jobs:
           expect "*password:"
           send "${{ secrets.PRODUCTION_SSH_PASSWORD }}\r"
           expect "*$ "
-          send "docker compose pull ${{ secrets.DOCKER_USERNAME }}/monrepoondockerhub && docker compose up -d ml_model\r"
+          send "docker compose pull ${{ secrets.DOCKER_USERNAME }}/fastapi-house-price-app && docker compose up -d ml_model\r"
           expect "*$ "
           send "exit\r"
           EOF
