--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
 
       # Step 2: Build the Docker image
       - name: Build Docker image
-        run: docker compose -f docker-compose.yml build fastapi-house-price-app
+        run: docker compose -f docker-compose.yml -p fastapi-house-app build
 
       # Step 3: Tag the Docker image
       - name: Tag Docker image
-        run: docker tag ml_model ${{ secrets.DOCKER_USERNAME }}/fastapi-house-price-app
+        run: docker tag ml_model ${{ secrets.DOCKER_USERNAME }}/fastapi-house-app
 
       # Step 4: Log in to Docker Hub
       - name: Log in to Docker Hub
@@ -25,11 +25,11 @@ jobs:
 
       # Step 5: Push the Docker image to Docker Hub
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/fastapi-houses-price-app
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/fastapi-houses-app
 
       # Step 6: Deploy to the remote server via SSH
       - name: Deploy via SSH
         run: |
           sshpass -p ${{ secrets.PRODUCTION_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.PRODUCTION_SSH_USER }}@${{ secrets.PRODUCTION_SERVER }} \
-            "docker compose pull ${{ secrets.DOCKER_USERNAME }}/fastapi-house-price-app && \
+            "docker compose pull ${{ secrets.DOCKER_USERNAME }}/fastapi-house-app && \
             docker compose up -d ml_model"
